src/api/antlr4/MinispecParser.java
package api.antlr4;
// Generated from Minispec.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MinispecParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, UpperCaseIdentifier=64, LowerCaseIdentifier=65, 
		DollarIdentifier=66, IntLiteral=67, StringLiteral=68, WhiteSpace=69, OneLineComment=70, 
		InlineComment=71;
	public static final int
		RULE_lowerCaseIdentifier = 0, RULE_upperCaseIdentifier = 1, RULE_identifier = 2, 
		RULE_anyIdentifier = 3, RULE_arg = 4, RULE_args = 5, RULE_argFormal = 6, 
		RULE_argFormals = 7, RULE_param = 8, RULE_params = 9, RULE_paramFormal = 10, 
		RULE_paramFormals = 11, RULE_type = 12, RULE_packageDef = 13, RULE_packageStmt = 14, 
		RULE_importDecl = 15, RULE_bsvImportDecl = 16, RULE_typeDecl = 17, RULE_typeDefSynonym = 18, 
		RULE_typeId = 19, RULE_typeDefEnum = 20, RULE_typeDefEnumElement = 21, 
		RULE_typeDefStruct = 22, RULE_structMember = 23, RULE_varDecl = 24, RULE_varInit = 25, 
		RULE_moduleDef = 26, RULE_moduleId = 27, RULE_moduleStmt = 28, RULE_submoduleDecl = 29, 
		RULE_inputDef = 30, RULE_methodDef = 31, RULE_ruleDef = 32, RULE_functionDef = 33, 
		RULE_functionId = 34, RULE_varAssign = 35, RULE_lvalue = 36, RULE_expression = 37, 
		RULE_caseExprItem = 38, RULE_binopExpr = 39, RULE_unopExpr = 40, RULE_exprPrimary = 41, 
		RULE_memberBinds = 42, RULE_memberBind = 43, RULE_beginEndBlock = 44, 
		RULE_regWrite = 45, RULE_stmt = 46, RULE_ifStmt = 47, RULE_caseStmt = 48, 
		RULE_caseStmtItem = 49, RULE_caseStmtDefaultItem = 50, RULE_forStmt = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"lowerCaseIdentifier", "upperCaseIdentifier", "identifier", "anyIdentifier", 
			"arg", "args", "argFormal", "argFormals", "param", "params", "paramFormal", 
			"paramFormals", "type", "packageDef", "packageStmt", "importDecl", "bsvImportDecl", 
			"typeDecl", "typeDefSynonym", "typeId", "typeDefEnum", "typeDefEnumElement", 
			"typeDefStruct", "structMember", "varDecl", "varInit", "moduleDef", "moduleId", 
			"moduleStmt", "submoduleDecl", "inputDef", "methodDef", "ruleDef", "functionDef", 
			"functionId", "varAssign", "lvalue", "expression", "caseExprItem", "binopExpr", 
			"unopExpr", "exprPrimary", "memberBinds", "memberBind", "beginEndBlock", 
			"regWrite", "stmt", "ifStmt", "caseStmt", "caseStmtItem", "caseStmtDefaultItem", 
			"forStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "','", "')'", "'#'", "'type'", "'import'", "';'", "'bsvimport'", 
			"'typedef'", "'enum'", "'{'", "'}'", "'='", "'struct'", "'let'", "'module'", 
			"'endmodule'", "'input'", "'default'", "'method'", "'endmethod'", "'rule'", 
			"'endrule'", "'function'", "'endfunction'", "'.'", "'['", "']'", "':'", 
			"'?'", "'case'", "'endcase'", "'**'", "'*'", "'/'", "'%'", "'+'", "'-'", 
			"'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&'", 
			"'^'", "'^~'", "'~^'", "'|'", "'&&'", "'||'", "'!'", "'~'", "'~&'", "'~|'", 
			"'return'", "'begin'", "'end'", "'if'", "'else'", "'for'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "UpperCaseIdentifier", "LowerCaseIdentifier", 
			"DollarIdentifier", "IntLiteral", "StringLiteral", "WhiteSpace", "OneLineComment", 
			"InlineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Minispec.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MinispecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class LowerCaseIdentifierContext extends ParserRuleContext {
		public TerminalNode LowerCaseIdentifier() { return getToken(MinispecParser.LowerCaseIdentifier, 0); }
		public LowerCaseIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lowerCaseIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterLowerCaseIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitLowerCaseIdentifier(this);
		}
	}

	public final LowerCaseIdentifierContext lowerCaseIdentifier() throws RecognitionException {
		LowerCaseIdentifierContext _localctx = new LowerCaseIdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lowerCaseIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LowerCaseIdentifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpperCaseIdentifierContext extends ParserRuleContext {
		public TerminalNode UpperCaseIdentifier() { return getToken(MinispecParser.UpperCaseIdentifier, 0); }
		public UpperCaseIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_upperCaseIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterUpperCaseIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitUpperCaseIdentifier(this);
		}
	}

	public final UpperCaseIdentifierContext upperCaseIdentifier() throws RecognitionException {
		UpperCaseIdentifierContext _localctx = new UpperCaseIdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_upperCaseIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(UpperCaseIdentifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public LowerCaseIdentifierContext lowerCaseIdentifier() {
			return getRuleContext(LowerCaseIdentifierContext.class,0);
		}
		public UpperCaseIdentifierContext upperCaseIdentifier() {
			return getRuleContext(UpperCaseIdentifierContext.class,0);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LowerCaseIdentifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				lowerCaseIdentifier();
				}
				break;
			case UpperCaseIdentifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				upperCaseIdentifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnyIdentifierContext extends ParserRuleContext {
		public LowerCaseIdentifierContext lowerCaseIdentifier() {
			return getRuleContext(LowerCaseIdentifierContext.class,0);
		}
		public UpperCaseIdentifierContext upperCaseIdentifier() {
			return getRuleContext(UpperCaseIdentifierContext.class,0);
		}
		public TerminalNode DollarIdentifier() { return getToken(MinispecParser.DollarIdentifier, 0); }
		public AnyIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterAnyIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitAnyIdentifier(this);
		}
	}

	public final AnyIdentifierContext anyIdentifier() throws RecognitionException {
		AnyIdentifierContext _localctx = new AnyIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_anyIdentifier);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LowerCaseIdentifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				lowerCaseIdentifier();
				}
				break;
			case UpperCaseIdentifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				upperCaseIdentifier();
				}
				break;
			case DollarIdentifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(DollarIdentifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitArg(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitArgs(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__0);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__10) | (1L << T__29) | (1L << T__30) | (1L << T__36) | (1L << T__37) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (UpperCaseIdentifier - 64)) | (1L << (LowerCaseIdentifier - 64)) | (1L << (DollarIdentifier - 64)) | (1L << (IntLiteral - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				setState(120);
				arg();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(121);
					match(T__1);
					setState(122);
					arg();
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(130);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgFormalContext extends ParserRuleContext {
		public LowerCaseIdentifierContext argName;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LowerCaseIdentifierContext lowerCaseIdentifier() {
			return getRuleContext(LowerCaseIdentifierContext.class,0);
		}
		public ArgFormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argFormal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterArgFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitArgFormal(this);
		}
	}

	public final ArgFormalContext argFormal() throws RecognitionException {
		ArgFormalContext _localctx = new ArgFormalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argFormal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			type();
			setState(133);
			((ArgFormalContext)_localctx).argName = lowerCaseIdentifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgFormalsContext extends ParserRuleContext {
		public List<ArgFormalContext> argFormal() {
			return getRuleContexts(ArgFormalContext.class);
		}
		public ArgFormalContext argFormal(int i) {
			return getRuleContext(ArgFormalContext.class,i);
		}
		public ArgFormalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argFormals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterArgFormals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitArgFormals(this);
		}
	}

	public final ArgFormalsContext argFormals() throws RecognitionException {
		ArgFormalsContext _localctx = new ArgFormalsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argFormals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__0);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UpperCaseIdentifier) {
				{
				setState(136);
				argFormal();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(137);
					match(T__1);
					setState(138);
					argFormal();
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(146);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public ExpressionContext intParam;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				((ParamContext)_localctx).intParam = expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__3);
			setState(153);
			match(T__0);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__10) | (1L << T__29) | (1L << T__30) | (1L << T__36) | (1L << T__37) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (UpperCaseIdentifier - 64)) | (1L << (LowerCaseIdentifier - 64)) | (1L << (DollarIdentifier - 64)) | (1L << (IntLiteral - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				setState(154);
				param();
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(155);
					match(T__1);
					setState(156);
					param();
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(164);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamFormalContext extends ParserRuleContext {
		public LowerCaseIdentifierContext intName;
		public UpperCaseIdentifierContext typeName;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LowerCaseIdentifierContext lowerCaseIdentifier() {
			return getRuleContext(LowerCaseIdentifierContext.class,0);
		}
		public UpperCaseIdentifierContext upperCaseIdentifier() {
			return getRuleContext(UpperCaseIdentifierContext.class,0);
		}
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamFormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramFormal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).enterParamFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinispecListener ) ((MinispecListener)listener).exitParamFormal(this);
		}
	}

	public final ParamFormalContext paramFormal() throws RecognitionException {
		ParamFormalContext _localctx = new ParamFormalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_paramFormal);
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				type();
				setState(167);
				((ParamFormalContext)_localctx).intName = lowerCaseIdentifier();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(T__4);
				setState(170);
				((ParamFormalContext)_localctx).typeName = upperCaseIdentifier();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(171);
				param();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
